fix openid ee9/ee8 modules
Signed-off-by: Olivier Lamy <oliver.lamy@gmail.com>